--- a/public/css/admin/main-page.css
+++ b/public/css/admin/main-page.css
@@ -29,17 +29,7 @@ footer {
     padding-bottom: 8px;
 }
 
-#add-theme > div {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-#add-theme-inside > p {
-    margin-bottom: 0;
-}
-
-#themes-list > div {
+#add-theme {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -50,31 +40,90 @@ footer {
     border: 1px solid black;
     background-color: white;
 
-    padding: 10px;
-
     transition: .3s;
 }
 
-#themes-list > div:hover {
+#add-theme:hover {
     box-shadow: -10px 10px #AB98FA;
     transform: translate(10px, -10px);
     transition: .3s;
 }
 
+#add-theme-inside {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#add-theme-inside > p {
+    margin-bottom: 0;
+}
+
+.theme {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    height: 50px;
+    margin-top: 30px;
+    border: 1px solid black;
+    background-color: white;
+
+    padding: 10px;
+
+    /*transition: .3s;*/
+}
+
+/*.theme:hover {*/
+/*    box-shadow: -10px 10px #AB98FA;*/
+/*    transform: translate(10px, -10px);*/
+/*    transition: .3s;*/
+/*}*/
+
 .theme > p {
     margin-bottom: 0;
 }
 
-.theme > img {
-    width: 30px;
-    height: 30px;
+.theme-btn {
+    background-color: transparent;
+    border: 0;
+}
+
+.theme-btn > img, .edit-btn-course > button > img {
+    width: 25px;
+    height: 25px;
+}
+
+.edit-btn-course {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.edit-btn-course > button {
+    height: 15px;
+    background-color: transparent;
+    border: 0;
 }
 
 #watch-all-link {
     display: flex;
     flex-direction: row-reverse;
     color: black;
+    margin-top: 20px;
     margin-bottom: 20px;
+}
+
+#theme-open {
+    padding: 0 50px 0 50px;
+}
+
+#theme-open > div {
+    border-left: 1px black solid;
+    border-right: 1px black solid;
+    border-bottom: 1px black solid;
+
+    background-color: white;
 }
 
 /* COURSES */
@@ -92,6 +141,7 @@ footer {
 #courses {
     display: grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
+    grid-gap: 2em;
 
     margin-top: 45px;
 }
@@ -99,17 +149,63 @@ footer {
 #add-course {
     background-color: white;
     border: 1px solid black;
-    width: 250px;
     height: 350px;
+
+    transition: .3s;
 }
 
 .course {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
     background-color: white;
     border: 1px solid black;
-    width: 250px;
     height: 350px;
 
     margin-bottom: 30px;
+    padding: 5px;
+
+    transition: .3s;
+}
+
+.text-course {
+    padding: 5px 15px 0 15px;
+}
+
+.header-course {
+    font-size: 20px;
+
+    margin-bottom: 5px;
+}
+
+.description-course {
+    font-size: 14px;
+    text-align: justify;
+
+    margin-bottom: 5px;
+}
+
+.time-course {
+    font-size: 13px;
+}
+
+.img-course {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-course > img {
+    height: 70%;
+    width: 70%;
+}
+
+.course:hover, #add-course:hover {
+    box-shadow: -10px 10px #FF9900;
+    transform: translate(10px, -10px);
+    transition: .3s;
 }
 
 #add-course-btn {
