--- a/public/css/main-page.css
+++ b/public/css/main-page.css
@@ -4,6 +4,33 @@ main {
     padding: 10px 7% 10px 7%;
 }
 
-/* canvas{
-    border: 1px solid black;
-} */
+canvas{
+    
+}
+
+.sizeBlokAuth{
+    width: 300px;
+    height: 300px;
+    background-color: #FF8A00;
+
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.posDialogWindow{
+ position: absolute;
+ top: 10em;
+ left: 25rem;
+}
+
+.borderNone{
+    border-radius: 0;
+    border: none;
+}
+
+.posAuth{
+    position: absolute;
+    top: 8em;
+    right: -66rem;
+}
