--- a/public/css/admin/theory.css
+++ b/public/css/admin/theory.css
@@ -3,42 +3,54 @@ main{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 section{
-    width: 80%;
+    width: 78%;
 }
 article{
     background-color: white;
-    width: 200px;
+    width: 20%;
     padding: 20px;
 }
 .edit{
     border: 0;
     background: none;
-    font-size: 26px;
-}
-section>div{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    font-size: 28px;
 }
 article>p{
     width: 100%;
     font-weight: 600;
+    font-size: 22px;
     border-bottom: 1px black solid;
+    margin-bottom: 5px;
 }
+article>ul>li{
+    list-style-type: none;
+}
+
 .section{
-    padding: 8px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px 10px 20px;
     background-color: #AB98FA;
     font-size: 26px;
 }
 .theme{
+    position: relative;
     margin: 10px 0 10px 0 ;
     padding: 5px;
     background-color: rgba(171, 152, 250, 0.4);
     font-size: 18px;
     text-align: center;
+}
+.theme>.edit{
+    position: absolute;
+    top: 0;
+    right: 20px;
+    font-size: 24px;
 }
 #editorjs{
     width: 100%;
@@ -50,6 +62,33 @@ article>p{
 .ce-block__content{
     width: 100%;
     margin: 0;
+    padding-left: 15px;
+}
+.practice{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    padding: 10px 20px 10px 20px ;
+    background-color: rgb(253, 152, 0);
+    font-size: 22px;
+    color: white;
+}
+.file>img{
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+}
+.add{
+    background: none;
+    border: 0;
+    font-size: 32px;
+    font-weight: 600;
+    color: white;
+}
+#out_editor{
+    background: white;
     padding: 20px;
 }
 /*.ce-toolbar__content{*/
