--- a/public/css/admin/testing.css
+++ b/public/css/admin/testing.css
@@ -12,14 +12,64 @@ footer {
 
 /* TESTS LIST */
 
+#tests-list > div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    background-color: white;
+    border: 1px solid black;
+    margin-bottom: 20px;
+    height: 50px;
+
+    transition: .3s;
+}
+
+#tests-list > div:hover {
+    box-shadow: -10px 10px #AB98FA;
+    transform: translate(10px, -10px);
+    transition: .3s;
+}
 #tests > h3 {
     color: #FF9900;
     font-weight: 600;
     margin-bottom: 45px;
 }
 
-#add-test {
+#add-test-btn {
+    background-color: transparent;
+    border: 0;
+    margin-right: 10px;
+    font-size: 40px;
+    font-weight: 400;
+    padding-bottom: 8px;
+}
 
+#add-test-btn > a {
+    text-decoration: none;
+    color: black;
+}
+
+#add-test > p, .test-inside > p {
+    margin: 0;
+}
+
+.test-inside {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    padding: 10px;
+}
+
+.test-btn {
+    background-color: transparent;
+    border: 0;
+}
+
+.test-btn > img {
+    width: 25px;
+    height: 25px;
 }
 
 /* HEADER WITH TEST NAME */
