--- a/public/css/components.css
+++ b/public/css/components.css
@@ -8,7 +8,9 @@ body {
 
     background-color: #f1f1f1;
     height: 100%;
+    color: black;
     font-family: 'Jost', sans-serif;
+
 }
 
 /*  HEADER */
