--- a/public/css/main-page.css
+++ b/public/css/main-page.css
@@ -1,69 +1,178 @@
 main {
     flex: 1 0 auto;
 
-    padding: 10px 7% 10px 7%;
+    padding: 10px 15% 10px 15%;
 }
 
-.auth{
-    width: 300px;
-    height: 300px;
-}
-.sizeBlokAuth{
-    width: 300px;
-    height: 300px;
-    background-color: #FF8A00;
-
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-.posTextTrovald{
-    width:35rem;
-    height:10rem;
-    position: absolute;
-    top: 10em;
-    left: 30rem;
-
-    text-align: justify;
-}
-.posDialogWindow{
-    width:0px;
-    height:0px;
-    position: absolute;
-     top: 10em;
-    left: 25rem;
+footer {
+    padding: 10px 15% 20px 15%;
 }
 
-.borderNone{
-    border-radius: 0;
-    border: none;
+/*.auth {*/
+/*    width: 300px;*/
+/*    height: 300px;*/
+/*}*/
+/*.sizeBlockAuth {*/
+/*    width: 300px;*/
+/*    height: 300px;*/
+/*    background-color: #FF8A00;*/
+
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    text-align: center;*/
+/*}*/
+/*.posTextTrovald {*/
+/*    width:35rem;*/
+/*    height:10rem;*/
+/*    position: absolute;*/
+/*    top: 10em;*/
+/*    left: 30rem;*/
+
+/*    text-align: justify;*/
+/*}*/
+/*.posDialogWindow{ */
+/*    width:0px;*/
+/*    height:0px;*/
+/*    position: absolute;*/
+/*     top: 10em;*/
+/*    left: 25rem;*/
+/*}*/
+
+/*.borderNone {*/
+/*    border-radius: 0;*/
+/*    border: none;*/
+/*}*/
+
+/*.posAuth {*/
+/*    width:0px;*/
+/*    height:0px;*/
+/*    position: absolute;*/
+/*    top: 8em;*/
+/*    left: 66rem;*/
+/*}*/
+
+/* INFO */
+
+.about-python {
+    margin-bottom: 30px;
 }
 
-.posAuth{
-    width:0px;
-    height:0px;
-    position: absolute;
-    top: 8em;
-    left: 66rem;
+.header-python {
+    font-size: 32px;
+    font-weight: 600;
+    color:#FF8A00;
+    margin-bottom: 25px;
 }
 
-.textDiv{
-    padding: 10px 12% 10px 12%;
-}
-
-.textDiv p{
+.text-python {
+    font-size: 18px;
     display: flex;
     text-align: justify;
 }
 
-.colorBlock{
-    position:initial;
+/* COURSES */
+
+#header-courses {
     width: 100%;
+    height: 50px;
     background-color: #AB98FA;
-    height: 70px;
-    margin-bottom: 2em;
 }
 
-.colorOrange{
-    color:#FF8A00;
+#header-courses > h3 {
+    color: black;
+    padding: 10px 15% 20px 15%;
+}
+
+#courses {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    grid-gap: 2em;
+
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.course {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    background-color: white;
+    border: 1px solid black;
+    height: 350px;
+
+    padding: 5px;
+
+    transition: .3s;
+}
+
+.text-course {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    padding: 5px 15px 0 15px;
+}
+
+.header-course {
+    font-size: 20px;
+
+    margin-bottom: 5px;
+}
+
+.description-course {
+    font-size: 14px;
+    text-align: justify;
+
+    margin-bottom: 5px;
+}
+
+.time-course {
+    font-size: 13px;
+}
+
+.img-course {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-course > img {
+    height: 80%;
+    width: 80%;
+}
+
+.course:hover {
+    box-shadow: -10px 10px #FF9900;
+    transform: translate(10px, -10px);
+    transition: .3s;
+}
+
+.edit-btn-course > button > img {
+    width: 25px;
+    height: 25px;
+}
+
+.edit-btn-course {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.edit-btn-course > button {
+    height: 15px;
+    background-color: transparent;
+    border: 0;
+}
+
+.watch-all-courses {
+    display: flex;
+    flex-direction: row-reverse;
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.watch-all-courses > a {
+    color: black;
 }
