--- a/public/css/authorized-main-page.css
+++ b/public/css/authorized-main-page.css
@@ -233,6 +233,13 @@ footer {
     justify-content: space-between;
 
     padding: 5px 15px 0 15px;
+
+    cursor: pointer;
+}
+
+.text-course > a {
+    color: black;
+    text-decoration: none;
 }
 
 .header-course {
