--- a/public/css/personal-account.css
+++ b/public/css/personal-account.css
@@ -4,6 +4,14 @@ main {
     padding: 10px 7% 10px 7%;
 }
 
+footer {
+    padding: 10px 15% 20px 15%;
+    padding-top: 10px;
+    padding-right: 15%;
+    padding-bottom: 20px;
+    padding-left: 15%;
+}
+
 .NavTransparent{
     background-color: transparent;
 }
@@ -13,6 +21,17 @@ main {
     border-top-right-radius: 0;
     border-top-left-radius: 0;
     /* background-color: #FF8A00; */
+}
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    background-color:transparent;
+    color:#FF8A00;
+}
+
+.nav-pills .nav-link {
+    background: 0 0;
+    border: 0;
+    border-radius: 0;
 }
 
 .nav-tabs .nav-link.active{
@@ -27,6 +46,25 @@ table thead{
     /* text-align: justify; */
 }
 
+.group-fix {
+    /* position: relative;
+    right: auto; */
+    background-color:white;
+    width: 150px;
+    height: 400px;
+    padding: 1em;
+}
+
+#header-courses {
+    width: 100%;
+    height: 50px;
+    background-color: #AB98FA;
+}
+
+#header-courses > h3 {
+    color: black;
+    padding: 10px 15% 20px 15%;
+}
 
 /* .table>:not(caption)>*>*{
     background-color: none;
@@ -35,3 +73,11 @@ table thead{
     background-color: #FF8A00;
 } */
 
+table{
+    background-color: white;
+}
+
+.block-statistic{
+width: 600px; 
+height: 400px; 
+background-color:#AB98FA;}
